--- a/PairWise/View/profile.html
+++ b/PairWise/View/profile.html
@@ -79,18 +79,18 @@
 
           <div class="ui groups">
             <div class="ui segment groups" id="g1">
-              <h3 class="taskname">Group 1</h3>
+              <h3 class="groupname">Group 1</h3>
               <div class="ui divider"></div>
               
 
             </div>
             <div class="ui segment groups" id="g1">
-              <h3 class="taskname">Group 2</h3>
+              <h3 class="groupname">Group 2</h3>
               <div class="ui divider"></div>
               
             </div>
             <div class="ui segment groups" id="g1">
-              <h3 class="taskname">Group 3</h3>
+              <h3 class="groupame">Group 3</h3>
               <div class="ui divider"></div>
               
 
