--- a/frontend/src/components/Splash.css
+++ b/frontend/src/components/Splash.css
@@ -1,67 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
-/*
- * Globals
- */
-
-/* Links */
-a,
-a:focus,
-a:hover {
-  color: #fff;
-}
-
-/* Custom default button */
-.btn-secondary,
-.btn-secondary:hover,
-.btn-secondary:focus {
-  color: white;
-  text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: rgb(44, 195, 153);
-  border: .05rem solid #fff;
-}
-
-
-/*
- * Base structure
- */
-
-html,
-body {
-  height: 100%;
-  background-color: white;
-  font-family: Slack-Averta,appleLogo,sans-serif;
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
-
-}
-
-body {
-  
-  color: black;
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-
-}
-
-img {
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    padding: 5px;
-    width: 150px;
-}
-
-<img src="wisePear.jpg" alt="Pear">
-
-a.btn-secondary {
-    margin: 2px;
-}
-
-#classrooms {
-    margin-left: 20px;
-    color: rgb(44, 195, 153);
-}
-
-h1 {
+.display-5 {
   font-family: 'Georgia', sans-serif;
   font-size: 60px;
   font-weight: bold;
@@ -69,7 +8,7 @@ h1 {
   text-align: justify;
 }
 
-h2 {
+.c {
   font-family: 'Verdana', sans-serif;
   font-size: 20px;
   font-weight: bold;
@@ -77,7 +16,7 @@ h2 {
   text-align: justify;
 }
 
-p1 {
+.lead {
   font-family: 'Montserrat', sans-serif;
   font-size: 18px;
   height: 50px;
@@ -89,73 +28,4 @@ p2 {
   font-size: 18px;
   height: 50px;
   width: 300px;
-}
-
-.cover-container {
-  max-width: 42em;
-}
-
-
-/*
- * Header
- */
-.masthead {
-  margin-bottom: 2rem;
-}
-
-.masthead-brand {
-  margin-bottom: 0;
-}
-
-.nav-masthead .nav-link {
-  padding: .25rem 0;
-  font-weight: 700;
-  /*color: rgba(255, 255, 255, .5);*/
-  background-color: transparent;
-  border-bottom: .25rem solid transparent;
-}
-
-.nav-masthead .nav-link:hover,
-.nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
-}
-
-.nav-masthead .nav-link + .nav-link {
-  margin-left: 1rem;
-}
-
-.nav-masthead .active, .nav-link {
-  color: rgb(44, 195, 153);
-  border-bottom-color: #fff;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-@media (min-width: 48em) {
-  .masthead-brand {
-    float: left;
-  }
-  .nav-masthead {
-    float: right;
-  }
-}
-
-
-/*
- * Cover
- */
-.cover {
-  padding: 0 1.5rem;
-}
-.cover .btn-lg {
-  padding: .75rem 1.25rem;
-  font-weight: 700;
-}
-
-
-/*
- * Footer
- */
-.mastfoot {
-  color: rgba(255, 255, 255, .5);
 }
