--- a/frontend/src/components/Splash.css
+++ b/frontend/src/components/Splash.css
@@ -1,15 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 .display-5 {
-  font-family: 'Georgia', sans-serif;
+  font-family: 'Quicksand', sans-serif;
   font-size: 60px;
   font-weight: bold;
   color: darkblue;
-  text-align: justify;
+  text-align: center;
 }
 
-.c {
-  font-family: 'Verdana', sans-serif;
+.splash h2 {
+  font-family: 'Quicksand', sans-serif;
   font-size: 20px;
   font-weight: bold;
   color: black;
@@ -17,15 +17,28 @@
 }
 
 .lead {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Quicksand', sans-serif;
   font-size: 18px;
-  height: 50px;
-  width: 300px;
 }
 
-p2 {
-  font-family: 'Montserrat', sans-serif;
+.p2 {
+  font-family: 'Quicksand', sans-serif;
   font-size: 18px;
-  height: 50px;
-  width: 300px;
+}
+
+.splash {
+	width: 60%;
+	margin: 0 auto;
+	background-color: #EAEAEA;
+	border-radius: 20px;
+	padding: 10px;
+	text-align: center;
+}
+
+.splash-inner {
+	width: 70%;
+	margin: 0 auto;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	text-align: left;
 }
