--- a/frontend/src/components/main.css
+++ b/frontend/src/components/main.css
@@ -66,7 +66,7 @@ html, body {
 	height: 100vh;
 }
 
-.searchForm form, h1, h2 {
+.searchForm form h1, .searchForm form h2 {
 	float: left;
 }
 
@@ -76,7 +76,7 @@ html, body {
 	width: 50%;
 }
 
-.searchForm input, textarea {
+.searchForm input, .searchForm textarea {
 	border-radius: 4px;
 	border: 1px solid #ccc;
 	background-color: #fafafa;
@@ -109,7 +109,7 @@ html, body {
 /* using this to make our inputs/textareas look like react-select forms until I
  * can figure out how to edit their CSS */
 
-.fakeSelect input:focus, textarea:focus {
+.fakeSelect input:focus, .fakeSelect textarea:focus {
 	border-width: 1px;
 	border-color: #2684ff;
 	box-shadow: 0 0 0 1px #2684ff;
