Make login page conform to splash/search form style (#65)
* Login/Register Modal + NavBar (#47)

* Create home.html

* uploaded home.html

added home.html, with forms needed (html only)

* uploaded home.html & stylesheet.css

Added style sheet, updated html, and placed home.html in correct folder

* added login.js

Added login.js file, Updated html and css file to match.

* Add files via upload

Login/Register are now Modals (hovering popup type window)
Visuals done, looking for review
login.js updated to smoothly transition between windows

* Create testfile

* uploaded images used on login pages

uploaded images used on login pages

* Delete testfile

* updated login.js

fixed issue where modal size would be too be if you click back from register modal, then open the login modal again

* updated login.js

fixed issue fade in issue on register click straight from home page

* Updated for responsiveness

* Added navbar 

Added navbar, with css elements (working with login modal)

* added navbar for after login

added and styled navbars, now have two for before login and after.

* Delete home.html

* Delete login.js

* Delete stylesheet.css

* init NavBar component

* init basic css for main component (header/sidebar/content)

* integrate navbar into Main component

* init SearchForm (page for creating new search)

* fix line endings

* install react-select library for form autcompletion

* add hard-coded data to circumvent CORS issues

* add react-select forms to search page and update css

* fix buggy export in courseList

* fix course selection not registering on click

* fix issues from merge commit

* add route to SearchForm

* edit login page to use style from search form

* add placeholder text to password field

* update login css

* handle state change during form input

--- a/frontend/src/components/main.css
+++ b/frontend/src/components/main.css
@@ -102,8 +102,14 @@ html, body {
 }
 
 .searchForm button {
-	float: center;
+	display: inline;
+	padding: 8px 10px;
 	margin-top: 10px;
+	border-radius: 4px;
+	border: 1px solid #ccc;
+	background-color: #fafafa;
+	outline: 0 !important;
+	padding: 10px;
 }
 
 /* using this to make our inputs/textareas look like react-select forms until I
