--- a/frontend/src/components/Dashboard.css
+++ b/frontend/src/components/Dashboard.css
@@ -6,6 +6,8 @@
 #sideContainer {
   padding: 0;
   height: 90vh;
+  float: left;
+  width: 25%;
 }
 
 #contentContainer {
@@ -13,4 +15,7 @@
   height: 90vh;
   overflow-y: auto;
   background-color: #bebebe;
+  float: right;
+  width: 60%;
+  box-shadow: 5px 10px 5px #02447a;
 }
