--- a/frontend/src/components/Notifications.css
+++ b/frontend/src/components/Notifications.css
@@ -2,4 +2,13 @@
 	background-color: #efefef;
 	border-radius: 10px;
 	padding: 10px;
+	margin: 20px;
+	box-shadow: 5px 10px 5px teal;
+}
+
+#awayMsg {
+	font-size: 2.5em;
+	margin: 20px;
+	font-variant: small-caps;
+	color: teal;
 }
